Add start - end comments by sections into file

--- a/index.html
+++ b/index.html
@@ -19,8 +19,33 @@
     <!-- about me start -->
     <!-- about me end -->
 
+    <!-- skills start -->
+    <!-- skills end -->
+
+    <!-- resume start -->
+    <!-- resume end -->
+
+    <!-- achievements start -->
+    <!-- achievements end -->
+
+    <!-- services start -->
+    <!-- services end -->
+
+    <!-- portfolio start -->
+    <!-- portfolio end -->
+
+    <!-- testimonials start -->
+    <!-- testimonials end -->
+
+    <!-- blog start -->
+    <!-- blog end -->
+
+    <!-- get in touch start -->
+    <!-- get in touch end -->
+
     <!-- footer start -->
     <!-- footer end -->
 </body>
+
 
 </html>
