dabar jau tinakmas komentavimas

--- a/index.html
+++ b/index.html
@@ -16,32 +16,26 @@
     <!-- hero start -->
     <!-- hero end -->
 
-    <!-- about me start -->
-    <!-- about me end -->
-
-    <!-- skills start -->
-    <!-- skills end -->
-
-    <!-- resume start -->
-    <!-- resume end -->
-
-    <!-- achievements start -->
-    <!-- achievements end -->
+    <!-- about me + skills start -->
+    <!-- about me + skills end -->
 
     <!-- services start -->
     <!-- services end -->
 
     <!-- portfolio start -->
     <!-- portfolio end -->
-
+    
     <!-- testimonials start -->
     <!-- testimonials end -->
+
+    <!-- achievements with counters start -->
+    <!-- achievements with counters end -->
 
     <!-- blog start -->
     <!-- blog end -->
 
-    <!-- get in touch start -->
-    <!-- get in touch end -->
+    <!-- contact us start-->
+    <!-- contact us end-->
 
     <!-- footer start -->
     <!-- footer end -->
