--- a/index.html
+++ b/index.html
@@ -6,21 +6,119 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css"
+        integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/home.css">
 </head>
 
 <body>
     <!-- header start -->
+    <div id="header"></div>
     <!-- header end -->
 
     <!-- hero start -->
+    <div id="hero"></div>
     <!-- hero end -->
 
-    <!-- about me start -->
-    <!-- about me end -->
+    <!-- about me + skills start -->
+    <div id="about" class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6" style="height: 200px; background-color: rgb(228, 230, 168);">about</div>
+            <div class="col-sm-12 col-md-6" style="height: 200px;background-color: yellow"></div>
+        </div>
+    </div>
+    <!-- about me + skills end -->
+
+    <!-- services start -->
+    <div id="services" class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(188, 188, 248);">services</div>
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(91, 91, 241);"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(148, 169, 240)"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(85, 108, 240)"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(99, 125, 240);"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(92, 118, 233)"></div>
+        </div>
+    </div>
+    <!-- services end -->
+
+    <!-- portfolio start -->
+    <div id="portfolio" class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(233, 148, 183);">portfolio</div>
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(235, 74, 74)"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(219, 24, 40);"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(184, 58, 65)"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(221, 97, 128);"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(189, 98, 128)"></div>
+        </div>
+    </div>
+    <!-- portfolio end -->
+
+    <!-- testimonials start -->
+    <div id="testimonials" class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-12" style="height: 200px;background-color: rgb(156, 156, 211);">testimonials
+            </div>
+        </div>
+    </div>
+    <!-- testimonials end -->
+
+    <!-- achievements with counters start -->
+    <div id="achievements" class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-3" style="height: 200px;background-color: rgb(37, 218, 37);">counts
+            </div>
+            <div class="col-sm-12 col-md-3" style="height: 200px;background-color: rgb(132, 236, 132)">
+            </div>
+            <div class="col-sm-12 col-md-3" style="height: 200px;background-color: rgb(47, 177, 57);">
+            </div>
+            <div class="col-sm-12 col-md-3" style="height: 200px;background-color: rgb(152, 233, 152)">
+            </div>
+
+        </div>
+    </div>
+    <!-- achievements with counters end -->
+
+    <!-- blog start -->
+    <div id="blog" class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-12" style="height: 200px;background-color: rgb(218, 230, 111);">blog
+            </div>
+        </div>
+    </div>
+    <!-- blog end -->
+
+    <!-- contact us start-->
+    <div id="contact" class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(226, 226, 221);">contact
+            </div>
+            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(175, 175, 173);">
+            </div>
+            <div class="col-sm-12 col-md-4" style=" height: 200px;background-color: rgb(15, 15, 14);">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12" style="height: 200px;background-color: rgb(175, 206, 207);">form
+            </div>
+        </div>
+    </div>
+    <!-- contact us end-->
 
     <!-- footer start -->
+    <div id="footer" class="container">
+        <div class="row">
+            <div class="col-sm-12" style="height: 200px;background-color: rgb(133, 191, 238);">footer
+            </div>
+        </div>
+    </div>
     <!-- footer end -->
 </body>
+
 
 </html>
