fixed portfolio section responsive

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <!-- about me + skills start -->
     <div id="about" class="container">
         <div class="row">
-            <div class="col-sm-12 col-md-6" style="height: 200px; background-color: rgb(228, 230, 168);">about</div>
-            <div class="col-sm-12 col-md-6" style="height: 200px;background-color: yellow"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(228, 230, 168);">about</div>
+            <div class="col-sm-12 col-md-8" style="height: 200px;background-color: yellow"></div>
         </div>
     </div>
     <!-- about me + skills end -->
@@ -49,12 +49,12 @@
     <!-- portfolio start -->
     <div id="portfolio" class="container">
         <div class="row">
-            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(233, 148, 183);">portfolio</div>
-            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(235, 74, 74)"></div>
-            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(219, 24, 40);"></div>
-            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(184, 58, 65)"></div>
-            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(221, 97, 128);"></div>
-            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(189, 98, 128)"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(233, 148, 183);">portfolio</div>
+            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(235, 74, 74)"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(219, 24, 40);"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(184, 58, 65)"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(221, 97, 128);"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(189, 98, 128)"></div>
         </div>
     </div>
     <!-- portfolio end -->
