added static content to about me section

--- a/index.html
+++ b/index.html
@@ -36,9 +36,34 @@
 
     <!-- about me + skills start -->
     <div id="about" class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(228, 230, 168);">about</div>
-            <div class="col-sm-12 col-md-8" style="height: 200px;background-color: yellow"></div>
+
+        <!-- hero img start -->
+        <div class="about-me-left-side-img">
+            <!-- visas fotkes aprasymas tures vykti su css, fotke padeta img folderyje -->
+        </div>
+        <!-- hero img end -->
+
+        <div class="about-me-right-side">
+            <h2>About me</h2>
+            <span>UI / UX DESIGNER & WEB DEVELOPER</span>
+            <p>I am Jerry Daniels Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+                blanditiis provident, quos consectetur vero, commodi molestiae exercitationem quae minima distinctio
+                illum ut porro quisquam! Possimus nostrum maiores rem tenetur? Eum?
+            </p>
+
+            <!-- skills start -->
+            <div class="about-me-skills">
+
+            </div>
+            <!-- skills end -->
+
+            <!-- buttons start -->
+            <div class="about-me-buttons">
+                <button class="download-cv-btn">Download C.V</button>
+                <button class="contact-me-btn">Contact Me</button>
+            </div>
+            <!-- buttons end -->
+
         </div>
     </div>
     <!-- about me + skills end -->
