minor text changes

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             </div>
             <!-- skills end -->
 
-            <!-- buttons start -->
+            <!-- about me buttons start -->
             <div class="about-me-buttons">
                 <button class="download-cv-btn">Download C.V</button>
                 <button class="contact-me-btn">Contact Me</button>
             </div>
-            <!-- buttons end -->
+            <!-- about me buttons end -->
 
         </div>
     </div>
