--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="about-me-right-side">
             <h2>About me</h2>
             <span>UI / UX DESIGNER & WEB DEVELOPER</span>
-            <p>I am Jerry Daniels Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+            <p>I am <span>Jerry Daniels</span> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
                 blanditiis provident, quos consectetur vero, commodi molestiae exercitationem quae minima distinctio
                 illum ut porro quisquam! Possimus nostrum maiores rem tenetur? Eum?
             </p>
