--- a/index.html
+++ b/index.html
@@ -7,10 +7,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/components/header.css">
+    
 </head>
 
 <body>
     <!-- header start -->
+    <header class="header">
+        <nav class="navbar">
+            <a href="#" class="nav-logo">Daniels</a>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Works</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Clients</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Contact</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+</header>
     <!-- header end -->
 
     <!-- hero start -->
@@ -22,5 +57,7 @@
     <!-- footer start -->
     <!-- footer end -->
 </body>
+
+<script src="./js/home.js"></script>
 
 </html>
