section titles css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
         integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css"
         integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
@@ -38,7 +37,7 @@
     <div id="about" class="container">
         <div class="row">
             <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(228, 230, 168);">about</div>
-            <div class="col-sm-12 col-md-8" style="height: 200px;background-color: yellow"></div>
+            <div class="col-sm-12 col-md-8 section-title" style="height: 200px;background-color: yellow"><h3>About Me.</h3></div>
         </div>
     </div>
     <!-- about me + skills end -->
