--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css"
         integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/home.css">
-    <link rel="stylesheet" href="./css/components/header.css">
 
+    <link rel="stylesheet" href="./css/components/header.css">
     <!-- Favicon start -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -25,45 +25,58 @@
     <meta name="theme-color" content="#ffffff">
     <!-- Favicon end -->
 
-    
+
 </head>
 
 <body>
     <!-- header start -->
-    <div id="header"></div>
-    <header class="header">
-        <nav class="navbar">
-            <a href="#" class="nav-logo">Daniels</a>
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Works</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Clients</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>
-            </ul>
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
+    <div id="header" class="home-header">
+        <header class="header">
+            <nav class="navbar">
+                <div>
+                    <a href="#" class="nav-logo">DANIELS</a>
+                </div>
+                <ul class="nav-menu">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Works</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Clients</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+            </nav>
+
+
+            <div class="home-text">
+                <h3>Hello</h3>
+                <p class="active-text">I am Developer</p>
             </div>
-        </nav>
-</header>
+        </header>
+
+
+    </div>
+
     <!-- header end -->
 
     <!-- hero start -->
@@ -95,7 +108,8 @@
     <!-- portfolio start -->
     <div id="portfolio" class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(233, 148, 183);">portfolio</div>
+            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(233, 148, 183);">
+                portfolio</div>
             <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(235, 74, 74)"></div>
             <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(219, 24, 40);"></div>
             <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(184, 58, 65)"></div>
@@ -166,6 +180,6 @@
     <!-- footer end -->
 </body>
 
-<script src="./js/home.js"></script>
+<script src="./js/header.js"></script>
 
 </html>
