--- a/index.html
+++ b/index.html
@@ -69,8 +69,12 @@
 
 
             <div class="home-text">
-                <h3>Hello</h3>
-                <p class="active-text">I am Developer</p>
+                <h1>Hello</h1>
+                <h2 class="active-text">I am Developer</h2>
+            </div>
+            <div class="social-icon">
+                    <a href="#" >
+
             </div>
         </header>
 
