--- a/index.html
+++ b/index.html
@@ -37,23 +37,114 @@
     <!-- about me + skills start -->
     <div id="about" class="container">
         <div class="row">
-            <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(228, 230, 168);">about</div>
+            <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(228, 230, 168);"></div>
             <div class="col-sm-12 col-md-8" style="height: 200px;background-color: yellow"></div>
         </div>
     </div>
     <!-- about me + skills end -->
 
     <!-- services start -->
-    <div id="services" class="container">
+<div id="services" class="services-container">
+    <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(188, 188, 248);">services</div>
-            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(91, 91, 241);"></div>
-            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(148, 169, 240)"></div>
-            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(85, 108, 240)"></div>
-            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(99, 125, 240);"></div>
-            <div class="col-sm-12 col-md-4" style="height: 200px;background-color: rgb(92, 118, 233)"></div>
+            <div class="section-title">
+                <h3>Services.</h3>
+            </div>
+            <div class="col-sm-12 col-md-4 services-card">
+                <div class="service-item">
+                    <div class="icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                            class="bi bi-laptop" viewBox="0 0 16 16">
+                            <path
+                                d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z" />
+                        </svg>
+                    </div>
+                    <h4>Web Design</h4>
+                    <p>Lorem Ipsum is simply dummy text of the Lorem Ipsum has been the industry's standard dummy
+                        text
+                        ever</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 services-card">
+                <div class="service-item">
+                    <div class="icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                            class="bi bi-megaphone" viewBox="0 0 16 16">
+                            <path
+                                d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-.214c-2.162-1.241-4.49-1.843-6.912-2.083l.405 2.712A1 1 0 0 1 5.51 15.1h-.548a1 1 0 0 1-.916-.599l-1.85-3.49a68.14 68.14 0 0 0-.202-.003A2.014 2.014 0 0 1 0 9V7a2.02 2.02 0 0 1 1.992-2.013 74.663 74.663 0 0 0 2.483-.075c3.043-.154 6.148-.849 8.525-2.199V2.5zm1 0v11a.5.5 0 0 0 1 0v-11a.5.5 0 0 0-1 0zm-1 1.35c-2.344 1.205-5.209 1.842-8 2.033v4.233c.18.01.359.022.537.036 2.568.189 5.093.744 7.463 1.993V3.85zm-9 6.215v-4.13a95.09 95.09 0 0 1-1.992.052A1.02 1.02 0 0 0 1 7v2c0 .55.448 1.002 1.006 1.009A60.49 60.49 0 0 1 4 10.065zm-.657.975 1.609 3.037.01.024h.548l-.002-.014-.443-2.966a68.019 68.019 0 0 0-1.722-.082z" />
+                        </svg>
+                    </div>
+                    <h4>Web Design</h4>
+                    <p>Lorem Ipsum is simply dummy text of the Lorem Ipsum has been the industry's standard dummy
+                        text
+                        ever</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 services-card">
+                <div class="service-item">
+                    <div class="icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                            class="bi bi-umbrella-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M8 0a.5.5 0 0 1 .5.5v.514C12.625 1.238 16 4.22 16 8c0 0 0 .5-.5.5-.149 0-.352-.145-.352-.145l-.004-.004-.025-.023a3.484 3.484 0 0 0-.555-.394A3.166 3.166 0 0 0 13 7.5c-.638 0-1.178.213-1.564.434a3.484 3.484 0 0 0-.555.394l-.025.023-.003.003s-.204.146-.353.146-.352-.145-.352-.145l-.004-.004-.025-.023a3.484 3.484 0 0 0-.555-.394 3.3 3.3 0 0 0-1.064-.39V13.5H8h.5v.039l-.005.083a2.958 2.958 0 0 1-.298 1.102 2.257 2.257 0 0 1-.763.88C7.06 15.851 6.587 16 6 16s-1.061-.148-1.434-.396a2.255 2.255 0 0 1-.763-.88 2.958 2.958 0 0 1-.302-1.185v-.025l-.001-.009v-.003s0-.002.5-.002h-.5V13a.5.5 0 0 1 1 0v.506l.003.044a1.958 1.958 0 0 0 .195.726c.095.191.23.367.423.495.19.127.466.229.879.229s.689-.102.879-.229c.193-.128.328-.304.424-.495a1.958 1.958 0 0 0 .197-.77V7.544a3.3 3.3 0 0 0-1.064.39 3.482 3.482 0 0 0-.58.417l-.004.004S5.65 8.5 5.5 8.5c-.149 0-.352-.145-.352-.145l-.004-.004a3.482 3.482 0 0 0-.58-.417A3.166 3.166 0 0 0 3 7.5c-.638 0-1.177.213-1.564.434a3.482 3.482 0 0 0-.58.417l-.004.004S.65 8.5.5 8.5C0 8.5 0 8 0 8c0-3.78 3.375-6.762 7.5-6.986V.5A.5.5 0 0 1 8 0z" />
+                        </svg>
+                    </div>
+                    <h4>Web Design</h4>
+                    <p>Lorem Ipsum is simply dummy text of the Lorem Ipsum has been the industry's standard dummy
+                        text
+                        ever</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 services-card">
+                <div class="service-item">
+                    <div class="icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                            class="bi bi-gem" viewBox="0 0 16 16">
+                            <path
+                                d="M3.1.7a.5.5 0 0 1 .4-.2h9a.5.5 0 0 1 .4.2l2.976 3.974c.149.185.156.45.01.644L8.4 15.3a.5.5 0 0 1-.8 0L.1 5.3a.5.5 0 0 1 0-.6l3-4zm11.386 3.785-1.806-2.41-.776 2.413 2.582-.003zm-3.633.004.961-2.989H4.186l.963 2.995 5.704-.006zM5.47 5.495 8 13.366l2.532-7.876-5.062.005zm-1.371-.999-.78-2.422-1.818 2.425 2.598-.003zM1.499 5.5l5.113 6.817-2.192-6.82L1.5 5.5zm7.889 6.817 5.123-6.83-2.928.002-2.195 6.828z" />
+                        </svg>
+                    </div>
+                    <h4>Web Design</h4>
+                    <p>Lorem Ipsum is simply dummy text of the Lorem Ipsum has been the industry's standard dummy
+                        text
+                        ever</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 services-card">
+                <div class="service-item">
+                    <div class="icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                            class="bi bi-tv" viewBox="0 0 16 16">
+                            <path
+                                d="M2.5 13.5A.5.5 0 0 1 3 13h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zM13.991 3l.024.001a1.46 1.46 0 0 1 .538.143.757.757 0 0 1 .302.254c.067.1.145.277.145.602v5.991l-.001.024a1.464 1.464 0 0 1-.143.538.758.758 0 0 1-.254.302c-.1.067-.277.145-.602.145H2.009l-.024-.001a1.464 1.464 0 0 1-.538-.143.758.758 0 0 1-.302-.254C1.078 10.502 1 10.325 1 10V4.009l.001-.024a1.46 1.46 0 0 1 .143-.538.758.758 0 0 1 .254-.302C1.498 3.078 1.675 3 2 3h11.991zM14 2H2C0 2 0 4 0 4v6c0 2 2 2 2 2h12c2 0 2-2 2-2V4c0-2-2-2-2-2z" />
+                        </svg>
+                    </div>
+                    <h4>Web Design</h4>
+                    <p>Lorem Ipsum is simply dummy text of the Lorem Ipsum has been the industry's standard dummy
+                        text
+                        ever</p>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 services-card">
+                <div class="service-item">
+                    <div class="icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                            class="bi bi-camera-fill" viewBox="0 0 16 16">
+                            <path d="M10.5 8.5a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z" />
+                            <path
+                                d="M2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2zm.5 2a.5.5 0 1 1 0-1 .5.5 0 0 1 0 1zm9 2.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0z" />
+                        </svg>
+                    </div>
+                    <h4>Web Design</h4>
+                    <p>Lorem Ipsum is simply dummy text of the Lorem Ipsum has been the industry's standard dummy
+                        text
+                        ever</p>
+                </div>
+            </div>
+
         </div>
     </div>
+</div>
     <!-- services end -->
 
     <!-- portfolio start -->
