--- a/index.html
+++ b/index.html
@@ -272,6 +272,16 @@
                     <p>+20 010 2517 8918</p>
                 </div>
             </div>
+            <form>
+                <div class="input-row">
+                    <input placeholder="Name">
+                    <input type="email" placeholder="Email">
+                </div>
+                <textarea placeholder="Message" rows=8></textarea>
+                <div>
+                    <button type="button">Submit</button>
+                </div>
+            </form>
         </div>
     </div>
     <!-- contact us end-->
