--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-      integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous" />
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css"
@@ -28,7 +25,7 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <!-- Favicon end -->
-  </head>
+</head>
 
 <body>
 
@@ -107,16 +104,20 @@
                 </div>
                 <div class="icon-item">
                     <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-behance" viewBox="0 0 16 16">
-                            <path d="M4.654 3c.461 0 .887.035 1.278.14.39.07.711.216.996.391.286.176.497.426.641.747.14.32.216.711.216 1.137 0 .496-.106.922-.356 1.242-.215.32-.566.606-.997.817.606.176 1.067.496 1.348.922.281.426.461.957.461 1.563 0 .496-.105.922-.285 1.278a2.317 2.317 0 0 1-.782.887c-.32.215-.711.39-1.137.496a5.329 5.329 0 0 1-1.278.176L0 12.803V3h4.654zm-.285 3.978c.39 0 .71-.105.957-.285.246-.18.355-.497.355-.887 0-.216-.035-.426-.105-.567a.981.981 0 0 0-.32-.355 1.84 1.84 0 0 0-.461-.176c-.176-.035-.356-.035-.567-.035H2.17v2.31c0-.005 2.2-.005 2.2-.005zm.105 4.193c.215 0 .426-.035.606-.07.176-.035.356-.106.496-.216s.25-.215.356-.39c.07-.176.14-.391.14-.641 0-.496-.14-.852-.426-1.102-.285-.215-.676-.32-1.137-.32H2.17v2.734h2.305v.005zm6.858-.035c.286.285.711.426 1.278.426.39 0 .746-.106 1.032-.286.285-.215.46-.426.53-.64h1.74c-.286.851-.712 1.457-1.278 1.848-.566.355-1.243.566-2.06.566a4.135 4.135 0 0 1-1.527-.285 2.827 2.827 0 0 1-1.137-.782 2.851 2.851 0 0 1-.712-1.172c-.175-.461-.25-.957-.25-1.528 0-.531.07-1.032.25-1.493.18-.46.426-.852.747-1.207.32-.32.711-.606 1.137-.782a4.018 4.018 0 0 1 1.493-.285c.606 0 1.137.105 1.598.355.46.25.817.532 1.102.958.285.39.496.851.641 1.348.07.496.105.996.07 1.563h-5.15c0 .58.21 1.11.496 1.396zm2.24-3.732c-.25-.25-.642-.391-1.103-.391-.32 0-.566.07-.781.176-.215.105-.356.25-.496.39a.957.957 0 0 0-.25.497c-.036.175-.07.32-.07.46h3.196c-.07-.526-.25-.882-.497-1.132zm-3.127-3.728h3.978v.957h-3.978v-.957z"/>
-                          </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
+                            class="bi bi-behance" viewBox="0 0 16 16">
+                            <path
+                                d="M4.654 3c.461 0 .887.035 1.278.14.39.07.711.216.996.391.286.176.497.426.641.747.14.32.216.711.216 1.137 0 .496-.106.922-.356 1.242-.215.32-.566.606-.997.817.606.176 1.067.496 1.348.922.281.426.461.957.461 1.563 0 .496-.105.922-.285 1.278a2.317 2.317 0 0 1-.782.887c-.32.215-.711.39-1.137.496a5.329 5.329 0 0 1-1.278.176L0 12.803V3h4.654zm-.285 3.978c.39 0 .71-.105.957-.285.246-.18.355-.497.355-.887 0-.216-.035-.426-.105-.567a.981.981 0 0 0-.32-.355 1.84 1.84 0 0 0-.461-.176c-.176-.035-.356-.035-.567-.035H2.17v2.31c0-.005 2.2-.005 2.2-.005zm.105 4.193c.215 0 .426-.035.606-.07.176-.035.356-.106.496-.216s.25-.215.356-.39c.07-.176.14-.391.14-.641 0-.496-.14-.852-.426-1.102-.285-.215-.676-.32-1.137-.32H2.17v2.734h2.305v.005zm6.858-.035c.286.285.711.426 1.278.426.39 0 .746-.106 1.032-.286.285-.215.46-.426.53-.64h1.74c-.286.851-.712 1.457-1.278 1.848-.566.355-1.243.566-2.06.566a4.135 4.135 0 0 1-1.527-.285 2.827 2.827 0 0 1-1.137-.782 2.851 2.851 0 0 1-.712-1.172c-.175-.461-.25-.957-.25-1.528 0-.531.07-1.032.25-1.493.18-.46.426-.852.747-1.207.32-.32.711-.606 1.137-.782a4.018 4.018 0 0 1 1.493-.285c.606 0 1.137.105 1.598.355.46.25.817.532 1.102.958.285.39.496.851.641 1.348.07.496.105.996.07 1.563h-5.15c0 .58.21 1.11.496 1.396zm2.24-3.732c-.25-.25-.642-.391-1.103-.391-.32 0-.566.07-.781.176-.215.105-.356.25-.496.39a.957.957 0 0 0-.25.497c-.036.175-.07.32-.07.46h3.196c-.07-.526-.25-.882-.497-1.132zm-3.127-3.728h3.978v.957h-3.978v-.957z" />
+                        </svg>
                     </a>
                 </div>
                 <div class="icon-item">
                     <a href="#">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-youtube" viewBox="0 0 16 16">
-                            <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
-                          </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
+                            class="bi bi-youtube" viewBox="0 0 16 16">
+                            <path
+                                d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z" />
+                        </svg>
                     </a>
 
                 </div>
@@ -137,73 +138,55 @@
 
     <!-- about me + skills start -->
     <div id="about" class="container">
-      <div class="row">
+        <div class="row">
 
-        <!-- hero img start -->
-        <div class="col-sm-12 col-md-4 about-me-left-side-img">
-          <!-- visas fotkes aprasymas tures vykti su css, fotke padeta img folderyje -->
+            <!-- hero img start -->
+            <div class="col-sm-12 col-md-4 about-me-left-side-img">
+                <!-- visas fotkes aprasymas tures vykti su css, fotke padeta img folderyje -->
+            </div>
+            <!-- hero img end -->
+
+            <!-- about-me-right-side start -->
+            <div class="col-sm-12 col-md-4 about-me-right-side">
+                <h2>About me</h2>
+                <span>UI / UX DESIGNER & WEB DEVELOPER</span>
+                <p>
+                    I am <span>Jerry Daniels</span> Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Quaerat, blanditiis provident, quos
+                    consectetur vero, commodi molestiae exercitationem quae minima
+                    distinctio illum ut porro quisquam! Possimus nostrum maiores rem
+                    tenetur? Eum?
+                </p>
+                <!-- about-me-right-side end -->
+
+                <!-- skills start -->
+                <div class="about-me-skills"></div>
+                <!-- skills end -->
+
+                <!-- about me buttons start -->
+                <div class="about-me-buttons">
+                    <button class="download-cv-btn">Download C.V</button>
+                    <button class="contact-me-btn">Contact Me</button>
+                </div>
+                <!-- about me buttons end -->
+
+            </div>
         </div>
-        <!-- hero img end -->
-        
-        <!-- about-me-right-side start -->
-        <div class="col-sm-12 col-md-4 about-me-right-side">
-          <h2>About me</h2>
-          <span>UI / UX DESIGNER & WEB DEVELOPER</span>
-          <p>
-            I am <span>Jerry Daniels</span> Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Quaerat, blanditiis provident, quos
-            consectetur vero, commodi molestiae exercitationem quae minima
-            distinctio illum ut porro quisquam! Possimus nostrum maiores rem
-            tenetur? Eum?
-          </p>
-          <!-- about-me-right-side end -->
-
-          <!-- skills start -->
-          <div class="about-me-skills"></div>
-          <!-- skills end -->
-
-          <!-- about me buttons start -->
-          <div class="about-me-buttons">
-            <button class="download-cv-btn">Download C.V</button>
-            <button class="contact-me-btn">Contact Me</button>
-          </div>
-          <!-- about me buttons end -->
-
-        </div>
-      </div>
     </div>
     <!-- about me + skills end -->
 
     <!-- services start -->
     <div id="services" class="container">
-      <div class="row">
-        <div
-          class="col-sm-12 col-md-4"
-          style="height: 200px; background-color: rgb(188, 188, 248)"
-        >
-          services
+        <div class="row">
+            <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(188, 188, 248)">
+                services
+            </div>
+            <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(91, 91, 241)"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(148, 169, 240)"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(85, 108, 240)"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(99, 125, 240)"></div>
+            <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(92, 118, 233)"></div>
         </div>
-        <div
-          class="col-sm-12 col-md-4"
-          style="height: 200px; background-color: rgb(91, 91, 241)"
-        ></div>
-        <div
-          class="col-sm-12 col-md-4"
-          style="height: 200px; background-color: rgb(148, 169, 240)"
-        ></div>
-        <div
-          class="col-sm-12 col-md-4"
-          style="height: 200px; background-color: rgb(85, 108, 240)"
-        ></div>
-        <div
-          class="col-sm-12 col-md-4"
-          style="height: 200px; background-color: rgb(99, 125, 240)"
-        ></div>
-        <div
-          class="col-sm-12 col-md-4"
-          style="height: 200px; background-color: rgb(92, 118, 233)"
-        ></div>
-      </div>
     </div>
     <!-- services end -->
 
@@ -217,137 +200,90 @@
             <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(184, 58, 65)"></div>
             <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(221, 97, 128);"></div>
             <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(189, 98, 128)"></div>
-      <div class="row">
-        <div
-          class="col-xs-12 col-sm-6 col-md-4"
-          style="height: 200px; background-color: rgb(233, 148, 183)"
-        >
-          portfolio
-        </div>
-        <div
-          class="col-xs-12 col-sm-6 col-md-4"
-          style="height: 200px; background-color: rgb(235, 74, 74)"
-        ></div>
-        <div
-          class="col-xs-12 col-sm-6 col-md-4"
-          style="height: 200px; background-color: rgb(219, 24, 40)"
-        ></div>
-        <div
-          class="col-xs-12 col-sm-6 col-md-4"
-          style="height: 200px; background-color: rgb(184, 58, 65)"
-        ></div>
-        <div
-          class="col-xs-12 col-sm-6 col-md-4"
-          style="height: 200px; background-color: rgb(221, 97, 128)"
-        ></div>
-        <div
-          class="col-xs-12 col-sm-6 col-md-4"
-          style="height: 200px; background-color: rgb(189, 98, 128)"
-        ></div>
-      </div>
-    </div>
-    <!-- portfolio end -->
-
-    <!-- testimonials start -->
-    <div id="testimonials" class="container">
-      <div class="row">
-        <div
-          class="col-sm-12 col-md-12"
-          style="height: 200px; background-color: rgb(156, 156, 211)"
-        >
-          testimonials
-        </div>
-      </div>
-    </div>
-    <!-- testimonials end -->
-
-    <!-- achievements with counters start -->
-    <div id="achievements" class="container">
-      <div class="row">
-        <div
-          class="col-sm-12 col-md-3"
-          style="height: 200px; background-color: rgb(37, 218, 37)"
-        >
-          counts
-        </div>
-        <div
-          class="col-sm-12 col-md-3"
-          style="height: 200px; background-color: rgb(132, 236, 132)"
-        ></div>
-        <div
-          class="col-sm-12 col-md-3"
-          style="height: 200px; background-color: rgb(47, 177, 57)"
-        ></div>
-        <div
-          class="col-sm-12 col-md-3"
-          style="height: 200px; background-color: rgb(152, 233, 152)"
-        ></div>
-      </div>
-    </div>
-    <!-- achievements with counters end -->
-
-    <!-- blog start -->
-    <div id="blog" class="container">
-        <div class="row">
-            
-            <div class="col-sm-12 col-md-12" style="height: 200px;background-color: rgb(218, 230, 111);">blog
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px; background-color: rgb(233, 148, 183)">
+                    portfolio
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px; background-color: rgb(235, 74, 74)">
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px; background-color: rgb(219, 24, 40)">
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px; background-color: rgb(184, 58, 65)">
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px; background-color: rgb(221, 97, 128)">
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px; background-color: rgb(189, 98, 128)">
+                </div>
             </div>
-      <div class="row">
-        <div
-          class="col-sm-12 col-md-12"
-          style="height: 200px; background-color: rgb(218, 230, 111)"
-        >
-          blog
         </div>
-      </div>
-    </div>
-    <!-- blog end -->
+        <!-- portfolio end -->
 
-    <!-- contact us start-->
-    <div id="contact" class="container">
-      <div class="row">
-        <div
-          class="col-sm-12 col-md-4"
-          style="height: 200px; background-color: rgb(226, 226, 221)"
-        >
-          contact
+        <!-- testimonials start -->
+        <div id="testimonials" class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-12" style="height: 200px; background-color: rgb(156, 156, 211)">
+                    testimonials
+                </div>
+            </div>
         </div>
-        <div
-          class="col-sm-12 col-md-4"
-          style="height: 200px; background-color: rgb(175, 175, 173)"
-        ></div>
-        <div
-          class="col-sm-12 col-md-4"
-          style="height: 200px; background-color: rgb(15, 15, 14)"
-        ></div>
-      </div>
-      <div class="row">
-        <div
-          class="col-sm-12"
-          style="height: 200px; background-color: rgb(175, 206, 207)"
-        >
-          form
-        </div>
-      </div>
-    </div>
-    <!-- contact us end-->
+        <!-- testimonials end -->
 
-    <!-- footer start -->
-    <div id="footer" class="container">
-      <div class="row">
-        <div
-          class="col-sm-12"
-          style="height: 200px; background-color: rgb(133, 191, 238)"
-        >
-          footer
+        <!-- achievements with counters start -->
+        <div id="achievements" class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-3" style="height: 200px; background-color: rgb(37, 218, 37)">
+                    counts
+                </div>
+                <div class="col-sm-12 col-md-3" style="height: 200px; background-color: rgb(132, 236, 132)"></div>
+                <div class="col-sm-12 col-md-3" style="height: 200px; background-color: rgb(47, 177, 57)"></div>
+                <div class="col-sm-12 col-md-3" style="height: 200px; background-color: rgb(152, 233, 152)"></div>
+            </div>
         </div>
-      </div>
-    </div>
-    <!-- footer end -->
+        <!-- achievements with counters end -->
+
+        <!-- blog start -->
+        <div id="blog" class="container">
+            <div class="row">
+
+                <div class="col-sm-12 col-md-12" style="height: 200px;background-color: rgb(218, 230, 111);">blog
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-12" style="height: 200px; background-color: rgb(218, 230, 111)">
+                        blog
+                    </div>
+                </div>
+            </div>
+            <!-- blog end -->
+
+            <!-- contact us start-->
+            <div id="contact" class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(226, 226, 221)">
+                        contact
+                    </div>
+                    <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(175, 175, 173)"></div>
+                    <div class="col-sm-12 col-md-4" style="height: 200px; background-color: rgb(15, 15, 14)"></div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12" style="height: 200px; background-color: rgb(175, 206, 207)">
+                        form
+                    </div>
+                </div>
+            </div>
+            <!-- contact us end-->
+
+            <!-- footer start -->
+            <div id="footer" class="container">
+                <div class="row">
+                    <div class="col-sm-12" style="height: 200px; background-color: rgb(133, 191, 238)">
+                        footer
+                    </div>
+                </div>
+            </div>
+            <!-- footer end -->
 
 </body>
 
 <script src="./js/header.js"></script>
 
 </html>
-
