fixed Hello style

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
       <div class="home-text">
-        <span>Hello</span>
+        <span class="hello">Hello</span>
         <h1 class="active-text">I am Developer</h1>
         <div class="social-icon">
           <a href="#">
