--- a/index.html
+++ b/index.html
@@ -172,7 +172,6 @@
     <!-- about me + skills end -->
 
     <!-- services start -->
-
 <div id="services" class="services-container">
     <div class="container">
         <div class="row">
@@ -276,43 +275,70 @@
     <!-- services end -->
 
     <!-- portfolio start -->
-    <div id="portfolio" class="container">
+    <div id="portfolio" class="portfolio-container">
+        <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(233, 148, 183);">
-                portfolio</div>
-            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(235, 74, 74)"></div>
-            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(219, 24, 40);"></div>
-            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(184, 58, 65)"></div>
-            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(221, 97, 128);"></div>
-            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(189, 98, 128)"></div>
-      <div class="row">
-        <div
-          class="col-xs-12 col-sm-6 col-md-4"
-          style="height: 200px; background-color: rgb(233, 148, 183)"
-        >
-          portfolio
+            <div class="section-title">
+                <h3>Portfolio.</h3>
+            </div>
+
+            <div>
+            <div id="portfolio-filtering">
+               <span>All</span>
+               <span>Brand</span>
+               <span>Design</span>
+               <span>Graphic</span> 
+            </div>
+            <div class="filter-active"></div>
         </div>
-        <div
-          class="col-xs-12 col-sm-6 col-md-4"
-          style="height: 200px; background-color: rgb(235, 74, 74)"
-        ></div>
-        <div
-          class="col-xs-12 col-sm-6 col-md-4"
-          style="height: 200px; background-color: rgb(219, 24, 40)"
-        ></div>
-        <div
-          class="col-xs-12 col-sm-6 col-md-4"
-          style="height: 200px; background-color: rgb(184, 58, 65)"
-        ></div>
-        <div
-          class="col-xs-12 col-sm-6 col-md-4"
-          style="height: 200px; background-color: rgb(221, 97, 128)"
-        ></div>
-        <div
-          class="col-xs-12 col-sm-6 col-md-4"
-          style="height: 200px; background-color: rgb(189, 98, 128)"
-        ></div>
-      </div>
+
+<div>
+            <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
+                <div class="portfolio-item">
+                    <img src="./img/portfolio-1.jpg" alt="Image">
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
+                <div class="portfolio-item">
+                    <img src="./img/portfolio-2.jpg" alt="Image">
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
+                <div class="portfolio-item">
+                    <img src="./img/portfolio-3.jpg" alt="Image">
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
+                <div class="portfolio-item">
+                    <img src="./img/portfolio-4.jpg" alt="Image">
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
+                <div class="portfolio-item">
+                    <img src="./img/portfolio-5.jpg" alt="Image">
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
+                <div class="portfolio-item">
+                    <img src="./img/portfolio-6.jpg" alt="Image">
+                </div>
+            </div>
+
+           
+           
+            <!-- <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(235, 74, 74)"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(219, 24, 40)"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(184, 58, 65)"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(221, 97, 128)"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4" style="height: 200px;background-color: rgb(189, 98, 128)"></div> -->
+        </div>
+    </div>
+</div>
     </div>
     <!-- portfolio end -->
 
