--- a/index.html
+++ b/index.html
@@ -273,8 +273,19 @@
   <!-- testimonials start -->
   <div id="testimonials" class="container">
     <div class="row">
-      <div class="col-sm-12 col-md-12" style="height: 200px; background-color: rgb(156, 156, 211)">
-        testimonials
+      <div class="col-sm-12 col-md-12 testimonials-header">
+        <h2>Testimonials.</h2>
+      </div>
+      <div class="col-sm-12 col-md-12 testimonials-item">
+        <div class="author-image">
+          <img src="img/testimonials.jpg" alt="testimonials-img">
+        </div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat corporis praesentium quam ratione voluptatem,
+          excepturi ad dolore non, minus sint, beatae dicta exercitationem
+          quibusdam ducimus doloremque vel? Hic, nemo libero.
+        </p>
+        <h6>Alex Smith</h6>
+        <span>Random Customer</span>
       </div>
     </div>
   </div>
