--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <div class="container">
             <div class="row">
                 <div class="section-title">
-                    <h3>Portfolio.</h3>
+                    <h3>Portfolio..</h3>
                 </div>
                 <div>
                     <div id="portfolio-filtering">
