--- a/index.html
+++ b/index.html
@@ -351,67 +351,112 @@
   <!-- achievements with counters end -->
 
   <!-- blog start -->
-  <div id="blog" class="container">
-    <div class="row">
-      <div class="col-sm-12 col-md-12" style="height: 200px;background-color: rgb(218, 230, 111);">blog
-      </div>
-    </div>
-  </div>
-  <!-- blog end -->
+  <div id="blog" class="blog-container">
 
-  <!-- contact us start-->
-  <div id="contact" class="contact-container">
-    <div class="container">
-      <div class="row">
-        <div class="section-title">
-          <h2>Contact Us.</h2>
+    <div class="section-title">
+      <h2>Our blog.</h2>
+    </div>
+
+    <div class="row card-container">
+      <div class="card">
+        <div>
+          <img src="assets/skalbenke.jpg" alt="Image" class="img">
         </div>
-        <div class="col-sm-12 col-md-4">
-          <div class="icons">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-send-fill"
-              viewBox="0 0 16 16">
-              <path fill-rule="evenodd"
-                d="M15.964.686a.5.5 0 0 0-.65-.65l-.095.038L.767 5.854l-.001.001-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.563 2.903.432.275.275.432 2.903 4.563.002.002.26.41a.5.5 0 0 0 .886-.083l.181-.453L15.926.78l.038-.095Zm-1.833 1.89.471-1.178-1.178.471L5.93 9.363l.338.215a.5.5 0 0 1 .154.154l.215.338 7.494-7.494Z" />
-            </svg>
-          </div>
-          <h4>Address</h4>
-          <p>6834 Hollywood Blvd - Los Angeles CA</p>
-        </div>
-        <div class="col-sm-12 col-md-4">
-          <div class="icons">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-envelope"
-              viewBox="0 0 16 16">
-              <path fill-rule="evenodd"
-                d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
-            </svg>
-          </div>
-          <h4>Email</h4>
-          <p>Support@website.com</p>
-        </div>
-        <div class="col-sm-12 col-md-4">
-          <div class="icons">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-              class="bi bi-telephone-fill" viewBox="0 0 16 16">
-              <path fill-rule="evenodd"
-                d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
-            </svg>
-          </div>
-          <h4>Phone</h4>
-          <p>+20 010 2517 8918</p>
+
+        <div class="flex">
+          <a href="#" class="trend-text">Trends</a>
+          <h3>
+            <a href="big-int" class="blog-text">
+              Best Design Items to Appeal to the MIllennial
+          </h3>
+          </a>
+          <a href="#" class="under-line">Read More</a>
         </div>
       </div>
-      <form>
-        <div class="input-row">
-          <input placeholder="Name">
-          <input type="email" placeholder="Email">
+
+      <div class="card">
+        <img src="assets/megafon.jpg" alt="Image" class="img">
+        <div class="flex">
+          <a href="#" class="trend-text">Trends</a>
+          <h3>
+            <a href="big-int" class="blog-text">
+              Master There Awesome New Skills in March 2018
+          </h3>
+          </a>
+          <a href="under-line" class="under-line">Read More</a>
         </div>
-        <textarea placeholder="Message" rows=8></textarea>
-        <div>
-          <button type="button">Submit</button>
+      </div>
+
+      <div class="card">
+        <img src="assets/picture.jpg" alt="Image" class="img">
+        <div class="flex">
+          <a href="#" class="trend-text">Trends</a>
+          <h3>
+            <a href="big-int" class="blog-text">
+              Top WordPress Themes and Plugins for Hotels, Travel
+          </h3>
+          </a>
+          <a href="under-line" class="under-line">Read More</a>
         </div>
-      </form>
+      </div>
+
     </div>
   </div>
+    <!-- blog end -->
+
+    <!-- contact us start-->
+    <div id="contact" class="contact-container">
+      <div class="container">
+        <div class="row">
+          <div class="section-title">
+            <h2>Contact Us.</h2>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <div class="icons">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-send-fill"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                  d="M15.964.686a.5.5 0 0 0-.65-.65l-.095.038L.767 5.854l-.001.001-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.563 2.903.432.275.275.432 2.903 4.563.002.002.26.41a.5.5 0 0 0 .886-.083l.181-.453L15.926.78l.038-.095Zm-1.833 1.89.471-1.178-1.178.471L5.93 9.363l.338.215a.5.5 0 0 1 .154.154l.215.338 7.494-7.494Z" />
+              </svg>
+            </div>
+            <h4>Address</h4>
+            <p>6834 Hollywood Blvd - Los Angeles CA</p>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <div class="icons">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-envelope"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                  d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
+              </svg>
+            </div>
+            <h4>Email</h4>
+            <p>Support@website.com</p>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <div class="icons">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                  d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
+              </svg>
+            </div>
+            <h4>Phone</h4>
+            <p>+20 010 2517 8918</p>
+          </div>
+        </div>
+        <form>
+          <div class="input-row">
+            <input placeholder="Name">
+            <input type="email" placeholder="Email">
+          </div>
+          <textarea placeholder="Message" rows=8></textarea>
+          <div>
+            <button type="button">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
   <!-- contact us end-->
 
