--- a/index.html
+++ b/index.html
@@ -276,51 +276,36 @@
     <!-- services end -->
 
     <!-- portfolio start -->
-    <div id="portfolio" class="portfolio-container">
+    <div id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="section-title">
-                    <h3>Portfolio.</h3>
-                </div>
-                <div>
+                    <h2>Portfolio.</h2>
                     <div id="portfolio-filtering">
-                        <span>All</span>
-                        <span>Brand</span>
-                        <span>Design</span>
-                        <span>Graphic</span>
+                        <div>All</div>
+                        <div>Brand</div>
+                        <div>Design</div>
+                        <div>Graphic</div>
                     </div>
-                    <div class="filter-active"></div>
                 </div>
                 <div>
                     <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
-                        <div class="portfolio-item">
-                            <img src="./img/portfolio-1.jpg" alt="Image">
-                        </div>
+                        <img src="./img/portfolio-1.jpg" alt="Image">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
-                        <div class="portfolio-item">
-                            <img src="./img/portfolio-2.jpg" alt="Image">
-                        </div>
+                        <img src="./img/portfolio-2.jpg" alt="Image">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
-                        <div class="portfolio-item">
-                            <img src="./img/portfolio-3.jpg" alt="Image">
-                        </div>
+                        <img src="./img/portfolio-3.jpg" alt="Image">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
-                        <div class="portfolio-item">
-                            <img src="./img/portfolio-4.jpg" alt="Image">
-                        </div>
+                        <img src="./img/portfolio-4.jpg" alt="Image">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
-                        <div class="portfolio-item">
-                            <img src="./img/portfolio-5.jpg" alt="Image">
-                        </div>
+                        <img src="./img/portfolio-5.jpg" alt="Image">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
-                        <div class="portfolio-item">
-                            <img src="./img/portfolio-6.jpg" alt="Image">
-                        </div>
+                        <img src="./img/portfolio-6.jpg" alt="Image">
                     </div>
                 </div>
             </div>
