--- a/index.html
+++ b/index.html
@@ -290,22 +290,22 @@
                 </div>
                 <div>
                     <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
-                        <img src="./img/portfolio-1.jpg" alt="Image">
+                        <img src="assets/portfolio-1.jpg" alt="Image">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
-                        <img src="./img/portfolio-2.jpg" alt="Image">
+                        <img src="assets/portfolio-2.jpg" alt="Image">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
-                        <img src="./img/portfolio-3.jpg" alt="Image">
+                        <img src="assets//portfolio-3.jpg" alt="Image">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
-                        <img src="./img/portfolio-4.jpg" alt="Image">
+                        <img src="assets//portfolio-4.jpg" alt="Image">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
-                        <img src="./img/portfolio-5.jpg" alt="Image">
+                        <img src="assets//portfolio-5.jpg" alt="Image">
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 portfolio-card">
-                        <img src="./img/portfolio-6.jpg" alt="Image">
+                        <img src="assets//portfolio-6.jpg" alt="Image">
                     </div>
                 </div>
             </div>
