--- a/index.html
+++ b/index.html
@@ -390,10 +390,11 @@
   <!-- contact us start-->
   <div id="contact" class="contact-container">
     <div class="container">
-      <div class="row">
-        <div class="section-title">
+      <!-- <div class="row"> -->
+        <div class="section-title row">
           <h2>Contact Us.</h2>
         </div>
+        <div class="row">
         <div class="col-sm-12 col-md-4 contact-card">
           <div class="icons">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-send-fill"
@@ -427,7 +428,8 @@
           <span class="contact-item-title">Phone</span>
           <p>+20 010 2517 8918</p>
         </div>
-        <form>
+      </div>
+        <form class="col-12 row">
           <div class="input-row">
             <input placeholder="Name">
             <input type="email" placeholder="Email">
@@ -437,7 +439,7 @@
             <button type="button">Submit</button>
           </div>
         </form>
-      </div>
+      <!-- </div> -->
     </div>
   </div>
   <!-- contact us end-->
