--- a/index.html
+++ b/index.html
@@ -119,36 +119,59 @@
   <!-- header end -->
 
   <!-- about me + skills start -->
-  <div id="about" class="container">
-    <!-- hero img start -->
-    <div class="col-sm-12 col-md-4 about-me-left-side-img">
-      <!-- visas fotkes aprasymas tures vykti su css, fotke padeta img folderyje -->
-    </div>
-    <!-- hero img end -->
+  <div id="about" class="about-container">
+    <div class="row about-me-section">
 
-    <!-- about-me-right-side start -->
-    <div class="col-sm-12 col-md-4 about-me-right-side">
-      <h2>About me</h2>
-      <span>UI / UX DESIGNER & WEB DEVELOPER</span>
-      <p>
-        I am <span>Jerry Daniels</span> Lorem ipsum dolor sit amet
-        consectetur adipisicing elit. Quaerat, blanditiis provident, quos
-        consectetur vero, commodi molestiae exercitationem quae minima
-        distinctio illum ut porro quisquam! Possimus nostrum maiores rem
-        tenetur? Eum?
-      </p>
-      <!-- about-me-right-side end -->
-
-      <!-- skills start -->
-      <div class="about-me-skills"></div>
-      <!-- skills end -->
-
-      <!-- about me buttons start -->
-      <div class="about-me-buttons">
-        <button class="download-cv-btn">Download C.V</button>
-        <button class="contact-me-btn">Contact Me</button>
+      <!-- hero img start -->
+      <div class="col-sm-12 col-md-4 about-me-left-side-img">
+        <img src="img/hero.jpg" alt="hero-photo">
       </div>
-      <!-- about me buttons end -->
+      <!-- hero img end -->
+
+      <!-- about-me-right-side start -->
+      <div class="col-sm-12 col-md-4 about-me-right-side">
+        <h2>About me.</h2>
+        <span>UI / UX DESIGNER & WEB DEVELOPER</span>
+        <p>
+          I am <span>Jerry Daniels</span> Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Quaerat, blanditiis provident, quos
+          consectetur vero, commodi molestiae exercitationem quae minima
+          distinctio illum ut porro quisquam! Possimus nostrum maiores rem
+          tenetur? Eum?
+        </p>
+        <!-- about-me-right-side end -->
+
+        <!-- skills start -->
+        <div class="about-me-skills">
+          <div class="item">
+            <div class="skills-progress">
+              <h6>Web Design</h6>
+              <span data-value="66%" style="width: 63%;"></span>
+            </div>
+          </div>
+          <div class="item">
+            <div class="skills-progress">
+              <h6>Branding</h6>
+              <span data-value="80%" style="width: 80%;"></span>
+            </div>
+          </div>
+          <div class="item">
+            <div class="skills-progress">
+              <h6>Development</h6>
+              <span data-value="90%" style="width: 90%;"></span>
+            </div>
+          </div>
+        </div>
+        
+        <!-- skills end -->
+
+        <!-- about me buttons start -->
+        <div class="about-me-buttons">
+          <button class="download-cv-btn">Download C.V</button>
+          <button class="contact-me-btn">Contact Me</button>
+        </div>
+        <!-- about me buttons end -->
+      </div>
     </div>
   </div>
   <!-- about me + skills end -->
