--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <!-- about-me-right-side start -->
       <div class="col-sm-12 col-md-4 about-me-right-side">
         <h2>About me.</h2>
-        <span>UI / UX DESIGNER & WEB DEVELOPER</span>
+        <span>ui / ux designer & web developer</span>
         <p>
           I am <span>Jerry Daniels</span> Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Quaerat, blanditiis provident, quos
